fix info tooltip position on safari as well

--- a/airbyte-webapp/src/components/base/Tooltip/InfoTooltip.module.scss
+++ b/airbyte-webapp/src/components/base/Tooltip/InfoTooltip.module.scss
@@ -15,6 +15,6 @@ $icon-top: math.div($line-height - $icon-size, 2);
 }
 
 .icon {
-  position: absolute;
+  position: relative;
   top: $icon-top;
 }
